# steganalysis

./: .gitignore  README.md  pyproject.toml
documentation/: bib.bib  dct_pattern_matching.tex  echo-hiding-cepstral.tex  image-lsb-matching.tex  lsb_replacement_method.tex  lsb_replasing_method.tex  main.tex  statistical_methodes.tex  wstep.tex
image_lsbm_ml/: lab.ipynb  requirements.txt
latex/: bib.bib  main.tex
steganalysis/: results.txt
steganalysis/dct_pattern_matching/: features_extraction.py  message_encryption.py  model_training.py  pyproject.toml
steganalysis/echo_hiding/: echo_detector.py  echo_hiding.py  plot_echo_signal_spectrum_cepstrum.py  test_hide_image.py  test_hide_text.py
steganalysis/image_lsbm_ml/: feature_extraction.py  helpers.py  lab.ipynb  prepare_data.py
steganalysis/lsb_replasing_method/: implementation_and_tests.ipynb
steganalysis/statistical/: .gitignore  compress.py  histogram_multi.py
