[tool.poetry]
name = "steganalysis"
version = "1.0.0"
description = "Steganalysis methods"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.0"
scipy = "^1.15.0"
numpy = "^2.2.1"
notebook = "^7.3.2"
opencv-python = "^4.11.0.86"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
