[tool.poetry]
name = "krypto-project"
version = "0.1.0"
description = ""
authors = ["Ignacy Czajkowski <czignacy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
scipy = "^1.15.0"
cython = "^3.0.11"
scikit-learn = "^1.6.1"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
